2009-09-03  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/ListBoxAutomationPeerTest.cs: 
	Tests added for testing content when Template is null and not null.
	* System.Windows.Automation.Peers/SelectorAutomationPeerTest.cs: 
	Tests added for testing content when Template is null and not null,
	testing events.
	* System.Windows.Automation.Peers/SelectorItemAutomationPeerTest.cs: 
	Testing events.
	* System.Windows.Automation.Peers/FrameworkElementAutomationPeerTest.cs: 
	Fixed GetAutomationEventFrom and GetAutomationEventFrom, new internal
	class to get Peer from provider.

	r: alan

2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs:
	* System.Windows.Controls/ComboBoxTest.cs:
	* System.Windows.Controls.Primitives/SelectorTest.cs: Add some
	  more tests for IsSelected/SelectedIndex/SelectedObject. We
	  should wait til we're implementing SL3 behaviours before
	  fixing these tests as there's a bug in Silverlight 2.0 which
	  makes it very hard to figure out what's going on. r: toshok

2009-09-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add CrossDomainPolicyManager.cs to the build

	r: andreia

2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs:
	* System.Windows.Controls/ItemsControlTestBase.cs:
	* System.Windows.Controls.Primitives/SelectorTest.cs: Add a
	  test to check when ItemContainerStyle is used.

2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs:
	* System.Windows.Controls/ItemsControlTest.cs:
	* System.Windows.Controls/ItemsControlTestBase.cs:
	* System.Windows.Controls.Primitives/SelectorTest.cs: Remove
	  code duplication - DisplayMemberPath handling should only
	  exist in ItemsControl. This fixes DisplayMemberPath handling
	  for ListBox too. r: sde

2009-09-02  Jackson Harper  <jackson@ximian.com>

	* System.Windows.Media.Animation/StoryboardTest.cs: Test for