@@ -1,3 +1,8 @@
+2009-09-04  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ComboBoxTest.cs: Add tests for
+	  setting ComboBox.SelectedIndex from xaml. r: sde
+
 2009-09-03  Mario Carrion  <mcarrion@novell.com>
 
 	* System.Windows.Automation.Peers/ListBoxAutomationPeerTest.cs: 
